so faltando testes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.AboutActivity" android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".view.AboutActivity" android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".view.PokemonDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".view.LoadLoginActivity" />
+        <activity android:name=".view.LoadLoginActivity" android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".view.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
