--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+    // Dependência principal do Mockito
+    testImplementation 'org.mockito:mockito-core:2.28.2'
+    // Dependência do Mockito para testes no Android
+    androidTestImplementation 'org.mockito:mockito-android:2.28.2'
+    // Dependência do Mockito para ser possível mockar classes e métodos constantes
+    testImplementation 'org.mockito:mockito-inline:2.28.2'
 
     implementation 'com.android.support:recyclerview-v7:30.0.1'
     implementation 'com.google.android.material:material:1.2.1'
